# seis-attr-ssl

./: .gitignore  READEME.md  README.md  pyproject.toml  pytest.ini
.devcontainer/: compose-dev.yaml
.issue_forge/: project.sh
docs/: attribute_generation.md  data_format.md  data_pipeline.md  mae_debug_visualization.md  mae_pretraining.md  masking.md  mvp_spec.md  seis_ssl_cluster_artifact_layout.md  seis_ssl_cluster_extraction_manifest.txt  seis_ssl_cluster_mvp_spec.md  seis_ssl_cluster_runbook.md
proc/: __init__.py  build_nopims_manifests.py  eval_f3.py  filter_nopims_manifest_by_stats_qc.py  generate_attributes.py  infer_volume.py  prepare_nopims_normalization_stats.py  prepare_normalization_stats.py  train_dense_adapt.py  train_finetune.py  train_mae.py  visualize_attribute_compare.py  visualize_attribute_on_the_fly_compare.py
seis_attr_ssl/: __init__.py
tests/: README.md  conftest.py  helpers.py  test_attribute_generation.py  test_attribute_masking.py  test_attribute_on_the_fly_compare.py  test_attribute_patch_tokenizer3d.py  test_attribute_registry.py  test_checkpoint.py  test_config_loader.py  test_context_token_pooler.py  test_crop_sampler.py  test_data_pipeline_smoke.py  test_data_schema.py  test_downsample.py  test_filter_nopims_manifest_by_stats_qc.py  test_imports.py  test_mae_collate.py  test_mae_debug_visualization_arrays.py  test_mae_debug_visualization_regression.py  test_mae_debug_visualization_renderer.py  test_mae_masking_plan.py  test_mae_patching.py  test_mae_reconstruction_losses.py  test_mae_training_engine.py  test_manifest_builder.py  (+16 more)
(+135 files in other folders)
