[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seis-attr-ssl"
version = "0.1.0"
description = "Self-supervised 3D seismic attribute learning for few-label facies adaptation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
